fixed bug with using new Double(string) instead of using value of